[package]
name = "num_stream"
version = "0.1.2"
authors = ["Broderick Carlin <broderick.carlin@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/BroderickCarlin/num_stream"
description = "Rust crate that provides a Stream that yields incrementing numbers at a specified interval"
documentation = "https://docs.rs/num_stream/0.1.2/num_stream/"
keywords = ["async", "futures", "testing", "tokio"]
categories = ["asynchronous"]

[dependencies]
futures = "0.3" 
tokio = {version = "0.2", features = ["time", "stream"]}

[dev-dependencies]
tokio = {version = "0.2", features = ["rt-threaded", "macros"]}